--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 # .env
 DATABASE_URL=postgresql+psycopg2://postgres:av09900990@localhost:5432/fviz_full
 SQLALCHEMY_ECHO=false
+
+SECRET_KEY=change_me_to_long_random_string
+JWT_ALGORITHM=HS256
+
+CONFIRM_CODE_TTL_SECONDS=600
