added email delivery

--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@ SQLALCHEMY_ECHO=false
 SECRET_KEY=change_me_to_long_random_string
 JWT_ALGORITHM=HS256
 
-CONFIRM_CODE_TTL_SECONDS=600
+SMTP_USERNAME=noreply-fviz@rambler.ru
+SMTP_PASSWORD=qA2-A7U-XM4-8AP
